<resources>
    <string name="app_name">Burpple Food</string>
    <string name="activity_main_label">burpple</string>
    <string name="you_are_near">You are near</string>
    <string name="known_for">Known For</string>
    <string name="placeholder_main_search">Search e.g. Japanese in Yangon</string>
    <string name="far_away">Far Away</string>
    <string name="explore">Explore</string>
    <string name="promotion">Promotion</string>
    <string name="promotions">Promotions</string>
    <string name="featured">Featured</string>
    <string name="latest">Latest</string>
    <string name="see_more">See More</string>
    <string name="burpple_guidelines">Burpple Guidelines</string>
    <string name="new_n_trending">New &amp; Trending</string>
    <string name="newly_opened">Newly Opened</string>
    <string name="trending_venues">Trending Venues</string>
    <string name="explore_neighbourhoods">Explore Neighbourhoods</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="burpple_exclusive">Burpple Exclusive</string>e
    <string name="all_guides">All Guides</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>

    <string name="near_head_title">Yangon</string>
    <string name="foog_tag_main">food tag</string>
    <string name="food_list">Food List</string>
    <string name="food_label_1">Sushi</string>
    <string name="food_label_2">Burger</string>
    <string name="food_label_3">Cake</string>
    <string name="food_label_4">Pasta</string>
</resources>
