<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_explore"
        android:checked="true"
        android:icon="@drawable/ic_explore_24dp"
        android:title="@string/explore"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_all_guides"
        android:enabled="true"
        android:icon="@drawable/ic_contacts_24dp"
        android:title="@string/all_guides"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add"
        android:enabled="true"
        android:title=""
        android:icon="@drawable/ic_add_box_44dp"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_activity"
        android:enabled="true"
        android:icon="@drawable/ic_inbox_24dp"
        android:title="@string/activity"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_favorite_news"
        android:enabled="true"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />


</menu>