<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/rv_item_img_width"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    app:cardBackgroundColor="@color/white_full"
    app:cardCornerRadius="@dimen/margin_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/vp_food_list_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_detail_food_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/food_list"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <ImageView
                android:id="@+id/iv_detail_food_img_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/tv_detail_food_title"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_ushi"/>

            <TextView
                android:id="@+id/tv_detail_food_label_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_food_title"
                android:layout_toEndOf="@id/iv_detail_food_img_1"
                android:padding="@dimen/margin_small"
                android:text="@string/food_label_1"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>


            <ImageView
                android:id="@+id/iv_detail_food_img_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/iv_detail_food_img_1"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_hamburger"/>

            <TextView
                android:id="@+id/tv_detail_food_label_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detail_food_img_1"
                android:layout_toEndOf="@id/iv_detail_food_img_2"
                android:padding="@dimen/margin_small"
                android:text="@string/food_label_2"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_detail_food_img_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/iv_detail_food_img_2"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_cake"/>

            <TextView
                android:id="@+id/tv_detail_food_label_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detail_food_img_2"
                android:layout_toEndOf="@id/iv_detail_food_img_3"
                android:padding="@dimen/margin_small"
                android:text="@string/food_label_3"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>

        </RelativeLayout>

        <View
            android:id="@+id/v_divider_food_list"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/vp_food_list_detail"
            android:background="@color/divider"/>


        <TextView
            android:id="@+id/tv_explore_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_divider_food_list"
            android:text="@string/explore"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/secondary_text"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>