<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_medium_2"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    android:layout_weight="1"
    app:cardBackgroundColor="@color/white_full"
    app:cardCornerRadius="@dimen/margin_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/vp_trending_venues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_detail_trending_venues_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/trending_venues"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_detail_trending_venues_img_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/tv_detail_trending_venues_title"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_ushi" />

            <TextView
                android:id="@+id/tv_detail_trending_venues_label_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_title"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_1"
                android:text="@string/food_label_1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"  />


            <TextView
                android:id="@+id/tv_detail_trending_venues_detail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_label_1"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_1"
                android:text="@string/far_away"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular" />

            <ImageView
                android:id="@+id/iv_detail_trending_venues_img_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/tv_detail_trending_venues_detail_1"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_hamburger" />

            <TextView
                android:id="@+id/tv_detail_trending_venues_label_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_detail_1"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_2"
                android:text="@string/food_label_2"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"  />


            <TextView
                android:id="@+id/tv_detail_trending_venues_detail_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_label_2"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_2"
                android:text="@string/far_away"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular" />

            <ImageView
                android:id="@+id/iv_detail_trending_venues_img_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/tv_detail_trending_venues_detail_2"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_cake" />

            <TextView
                android:id="@+id/tv_detail_trending_venues_label_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_detail_2"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_3"
                android:text="@string/food_label_3"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"  />


            <TextView
                android:id="@+id/tv_detail_trending_venues_detail_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_trending_venues_label_3"
                android:layout_toEndOf="@id/iv_detail_trending_venues_img_3"
                android:text="@string/far_away"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular" />

        </RelativeLayout>

        <View
            android:id="@+id/v_divider_trending_venues_list"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/vp_trending_venues"
            android:background="@color/divider" />


        <TextView
            android:id="@+id/tv_explore_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_divider_trending_venues_list"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/explore"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular" />


    </RelativeLayout>

</android.support.v7.widget.CardView>