<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_main_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_main_id"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_toolbar_main_images"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true">

            </android.support.v4.view.ViewPager>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_rp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/activity_main_label"
                    android:textSize="@dimen/text_heading_2x"
                    android:textColor="@color/white_full"
                    android:layout_marginBottom="@dimen/margin_medium"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_below="@id/title_rp"
                    android:text="@string/placeholder_main_search"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/secondary_text"
                    android:focusable="false"
                    android:background="@drawable/bg_custom_search_main"
                    android:drawableStart="@drawable/ic_search_gray_24dp"
                    android:padding="@dimen/margin_card_medium"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_medium"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/rl_near_places_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_near_small_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/near_small_title"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/secondary_text"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tv_near_head_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_near_small_title"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/near_head_title"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_heading_1x" />

                <TextView
                    android:id="@+id/tv_near_known_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_near_head_title"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/known_for"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/primary"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_near_food_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_near_known_for"
                    android:layout_marginTop="@dimen/margin_medium"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_near_food_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_near_food_tag"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:padding="@dimen/margin_small"
                    android:clipToPadding="false"
                    android:scrollbarStyle="outsideOverlay"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_promotion_food_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_below="@id/rl_near_places_main">

                <TextView
                    android:id="@+id/tv_promotion_featured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/featured"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/secondary_text"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/tv_promotion_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_promotion_featured"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/promotions"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_heading_1x" />

                <TextView
                    android:id="@+id/tv_promotion_see_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_promotion_featured"
                    android:layout_toRightOf="@id/tv_promotion_title"
                    android:gravity="right"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/see_more"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/primary"
                    android:textAllCaps="true"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_promotion_food_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/tv_promotion_title"
                    android:padding="@dimen/margin_small"
                    android:clipToPadding="false"
                    android:scrollbarStyle="outsideOverlay" />


            </RelativeLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
